<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <HorizontalScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:scrollbars="none"
           >
           <LinearLayout
               android:id="@+id/linearLayout2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:orientation="horizontal"
               app:layout_constraintBottom_toTopOf="@+id/recycler_view"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">


               <!--            Buttons -->
               <com.google.android.material.button.MaterialButton
                   android:id="@+id/top_headlines"
                   android:layout_width="186dp"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_marginRight="5dp"
                   android:elevation="0dp"
                   android:fontFamily="@font/roboto_black"
                   android:stateListAnimator="@null"
                   android:text="@string/top_headlines"
                   android:textColor="@color/black"
                   app:backgroundTint="@color/transparent"
                   app:cornerRadius="40dp"
                   app:strokeColor="@color/app_grey_text_4"
                   app:strokeWidth="1dp" />

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/business_button"
                   android:layout_width="186dp"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_marginRight="5dp"
                   android:elevation="0dp"
                   android:fontFamily="@font/roboto_black"
                   android:stateListAnimator="@null"
                   android:text="@string/business"
                   android:textColor="@color/black"
                   app:backgroundTint="@color/transparent"
                   app:cornerRadius="40dp"
                   app:strokeColor="@color/app_grey_text_4"
                   app:strokeWidth="1dp" />

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/entertainment_button"
                   android:layout_width="186dp"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_marginRight="5dp"
                   android:elevation="0dp"
                   android:fontFamily="@font/roboto_black"
                   android:stateListAnimator="@null"
                   android:text="@string/entertainment"
                   android:textColor="@color/black"
                   app:backgroundTint="@color/transparent"
                   app:cornerRadius="40dp"
                   app:strokeColor="@color/app_grey_text_4"
                   app:strokeWidth="1dp" />

           </LinearLayout>
       </HorizontalScrollView>


        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:text="Top Headlines"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/app_grey_text_4"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>